fill in a bit more content

--- a/index.html
+++ b/index.html
@@ -6,6 +6,8 @@
     <!-- more metadata! for search engine happyness and stuff... -->
   </head>
 
+  <!-- where should showcase/past projects links go? separate page or somewhere in here? -->
+
   <body>
     <div id="content">
       <header id="header">
@@ -26,7 +28,6 @@
             <li><a href="#contact">Kontakt</a></li>
           </ul>
         </nav>
-
       </header>
       
       <!-- introduction (with image from current site) -->
@@ -51,6 +52,9 @@
       <section id="events">
         <h2>Termine</h2> <!-- "Demnächst"? -->
 
+        <!-- invite/ask/suggest to give a talk themselves here as well? -->
+        <p>Neben den regulären Treffen alle zwei Wochen laden wir in unregelmäßigen Abständen EntwicklerInnen zu Workshops und Vorträgen ein.</p>
+
         <ul>
           <li>alle zwei Wochen: Eloquent JavaScript Buchklub (hier <a href="http://wufoo.com/eloquent-javascript-buchclub">anmelden</a>!)</li>
           <li>3. April 2015, GitHub. Kann man das essen? (Und warum eigentlich nicht?)</li>
@@ -63,7 +67,7 @@
       <section id="where">
         <h2>Wo?</h2>
 
-        <p>Im <a href="http://sublab.org">sub:lab</a> im Westwerk (Plagwitz). Erreichbar mit den Straßenbahnen 3 und 14.</p>
+        <p>Im <a href="http://sublab.org">sub:lab</a> im Westwerk (Plagwitz), Karl-Heine-Straße 93. Erreichbar mit den Straßenbahnen 3 und 14.</p>
 
         <!-- prevent zooming when just "scrolling over"? maybe only enable zooming via buttons or when clicked? that might be confusing, though. -->
         <iframe id="map" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=12.329846620559692%2C51.32971669149415%2C12.3319011926651%2C51.33076749733022&amp;layer=mapnik&amp;marker=51.33024125945914%2C12.330873906612396"></iframe>
@@ -82,8 +86,8 @@
       <section id="contact">
         <h2>Kontakt</h2>
 
-        <!-- "feedback form"? twitter?
-        <p>Fragen, Tipps, Wünsche? Schreib uns an <a href="mailto:info@codegirls.de">info@codegirls.de</a> oder auf <a href="http://facebook.com/CodeGirls">Facebook</a>.</p>
+        <!-- "feedback form"? twitter? -->
+        <p>Fragen, Tipps, Wünsche? Schreib uns an <a href="mailto:info@codegirls.de">info@codegirls.de</a> oder auf <a href="http://facebook.com/CodeGirls">Facebook</a>. Einfach mal hallo sagen ist auch ok. :)</p>
 
         <!-- link suggested topics and other tips for potential coaches/mentors/...? -->
         <p>Vorschläge für Workshops, Vorträge und andere Ideen sind immer willkommen!</p>
