add a basic stylesheet
turns out i'm not sure how to design this yet. need to find some good
examples and then try again.

--- a/index.html
+++ b/index.html
@@ -3,6 +3,7 @@
   <head>
     <title>Code Girls</title>
     <meta charset="utf-8" />
+    <link rel="stylesheet" type="text/css" href="codegirls.css" />
     <!-- more metadata! for search engine happyness and stuff... -->
   </head>
 
