--- a/index.html
+++ b/index.html
@@ -54,14 +54,12 @@
       <section id="events">
         <h2>Termine</h2> <!-- "Demnächst"? -->
 
-        <!-- invite/ask/suggest to give a talk themselves here as well? -->
+        <!-- invite/ask/suggest to give a talk themselves here as well?, Links zu bisherigen Coaches -->
         <p>Neben den regulären Treffen alle zwei Wochen laden wir in unregelmäßigen Abständen EntwicklerInnen zu Workshops und Vorträgen ein.</p>
 
         <ul>
           <li>alle zwei Wochen: Eloquent JavaScript Buchklub (hier <a href="http://wufoo.com/eloquent-javascript-buchclub">anmelden</a>!)</li>
-          <li>3. April 2015, GitHub. Kann man das essen? (Und warum eigentlich nicht?)</li>
-          <li>10. Mai 2015, HTML &amp; CSS Support Group</li>
-          <li>...</li>
+          <li>Office Hours: 17.03., 31.03., 14.04. jeweils 19 bis 20:30 Uhr</li>
         </ul>
       </section>
 
@@ -81,7 +79,12 @@
       <section id="about">
         <h2>Über uns</h2>
 
-        <p>Es war einmal, ...</p>
+        <p>Die Geschichte der Code Girls begann mit der erfolgreichen Teilnahme an einem Gewinnspiel eines Telekommunikationsunternehmens: Zunächst vor allem begeistert von der Aussicht ein paar Tage im sommerlichen Berlin zu verbringen und ein paar Goodies abzustauben, reisten Natalie und Julia 2012 zur Campus Party in Berlin. 
+          Motiviert von den Erfolgsgeschichten junger Programmiererinnen und überzeugt, bald selbst auf Konferenzen vom eigenen Tech Startup zu berichten, beschlossen sie bei einem abendlichen Kaltgetränk die Gründung eines eigenen Codier- und Programmierstammtischs für Mädchen und Frauen in Leipzig. Der Erfolg in der
+          Branche ist dann doch nicht so schnell eingetreten wie erwartet, aber die Motivation, funktionale und ästhetisch ansprechende Seiten und Apps zu entwickeln, ist weiterhin ungebrochen. Mittlerweile unterstützt von Coach Lucas konzentrieren wir uns verstärkt auf die Organisation von Workshops und Vorträgen, sind aber weiterhin alle zwei Wochen
+          im sub:lab zu unseren "Office Hours" anzutreffen und begeistert über jede Frage und Projektidee, egal ob ihr euren Blog verschönern wollt, euer JavaScript Code spinnt oder ihr Tipps haben wollt, wie und wo man am besten mit dem Programmieren anfängt.
+  
+        </p>
       </section>
       
       <!-- contact -->
