Update About Us text

--- a/index.html
+++ b/index.html
@@ -80,10 +80,9 @@
         <h2>Über uns</h2>
 
         <p> Die Geschichte der Code Girls beginnt mit der erfolgreichen Teilnahme an einem Gewinnspiel eines Telekommunikationsunternehmens: Begeistert von der Aussicht ein paar Tage im sommerlichen Berlin zu verbringen Goodies abzustauben, reisen Natalie und Julia 2012 zur Campus Party in Berlin. </p>
-          <p></p>Motiviert von den Erfolgsgeschichten junger Programmiererinnen und überzeugt, bald selbst auf Konferenzen vom eigenen Tech-Start-Up zu berichten, beschließen sie bei einem abendlichen Kaltgetränk die Gründung eines eigenen Codier- und Programmierstammtischs für Mädchen und Frauen in Leipzig.</p> <p>Das Start-Up lässt zwar noch auf sich warten, aber die Motivation, funktionale und ästhetisch ansprechende Seiten und Apps zu entwickeln, ist weiterhin ungebrochen. Mittlerweile dazugekommen ist Lucas, unser Coach, der uns mit Geduld und Expertise bei unseren Unternehmungen unterstützt.Inzwischen konzentrieren wir uns hauptsächlich auf die Organisation von Workshops und Vorträgen, sind aber weiterhin alle zwei Wochen
-          im sub:lab zu unseren "Office Hours" anzutreffen und begeistert über jede Frage und Projektidee, egal ob ihr euren Blog verschönern wollt, euer JavaScript Code spinnt oder ihr Tipps haben wollt, wie und wo man am besten mit dem Programmieren anfängt.
-  
-        </p>
+          <p>Motiviert von den Erfolgsgeschichten junger Programmiererinnen und überzeugt, bald selbst auf Konferenzen vom eigenen Tech-Start-Up zu berichten, beschließen sie bei einem abendlichen Kaltgetränk die Gründung eines eigenen Codier- und Programmierstammtischs für Mädchen und Frauen in Leipzig.</p>
+          <p>Das Start-Up lässt zwar noch auf sich warten, aber die Motivation, funktionale und ästhetisch ansprechende Seiten und Apps zu entwickeln, ist weiterhin ungebrochen. Mittlerweile dazugekommen ist Lucas, unser Coach, der uns mit Geduld und Expertise bei unseren Unternehmungen unterstützt.Inzwischen konzentrieren wir uns hauptsächlich auf die Organisation von Workshops und Vorträgen, sind aber weiterhin alle zwei Wochen
+          im sub:lab zu unseren "Office Hours" anzutreffen und begeistert über jede Frage und Projektidee, egal ob ihr euren Blog verschönern wollt, euer JavaScript Code spinnt oder ihr Tipps haben wollt, wie und wo man am besten mit dem Programmieren anfängt.</p>
       </section>
       
       <!-- contact -->
