--- a/index.html
+++ b/index.html
@@ -47,9 +47,9 @@
         <li>Materialien zu unseren Projekten findet ihr <a href="http://codegirls.github.io/materials">hier</a>, interessante Links und Diskussionen gibt es in unserem Forum.</li>
 
         <li>Bei Fragen habt oder wenn ihr mit uns zusammenarbeiten möchtet, <a href="mailto:info@codegirls.de">schreibt uns gerne eine Email!</a>!</li>
-
-        <img src="codegirls-session.jpg" />
 </ul>
+        <img src="codegirls-session.jpg" />
+
       </section>
 
       <!-- upcoming events -->
@@ -60,7 +60,7 @@
         <p>Neben den regulären Treffen alle zwei Wochen laden wir in unregelmäßigen Abständen EntwicklerInnen zu Workshops und Vorträgen ein.</p>
 
         <ul>
-          <li>alle zwei Wochen: Eloquent JavaScript Buchklub (hier <a href="http://wufoo.com/eloquent-javascript-buchclub">anmelden</a>!)</li>
+          <li>alle zwei Wochen: Eloquent JavaScript Buchklub (Anmeldung bald möglich)</li>
           <li>Office Hours: 17.03., 31.03., 14.04. jeweils 19 bis 20:30 Uhr</li>
         </ul>
       </section>
