--- a/index.html
+++ b/index.html
@@ -37,8 +37,8 @@
         <!-- Make this a "hero image" with the image below? http://en.wikipedia.org/wiki/Hero_image -->
         <h2>Werde ein Code Grrrl!</h2>
 
-        <p>Schon mal versucht eine Fremdsprache zu lernen? Und von der Fülle an Vokabeln, Grammatik und Regeln total erschlagen gewesen? Genau so geht es euch vielleicht, wenn ihr euch das erste Mal mit einer Programmiersprache beschäftigt. Genau wie eine Fremdsprache lernt man HTML, Ruby on Rails oder Javascript deswegen am besten in der Gruppe. Und am allerliebsten mit uns!</p>
-        <p> Erst mal gilt es, die Basics zu lernen - damit lassen sich dann schon die ersten Sätze bilden. Und keine Angst, hier geht es nicht darum, so schnell wie möglich fehlerfreien Code zu schreiben. Wir möchten, dass ihr Spass an der Sache habt, dass ihr Fragen stellt, dass ihr neugierig seid und dass aktiv werdet.</p>
+        <p>Schon mal versucht eine Fremdsprache zu lernen? Und von der Fülle an Vokabeln, Grammatik und Regeln total erschlagen gewesen? Genau so geht es euch vielleicht, wenn ihr euch das erste Mal mit einer Programmiersprache beschäftigt. Genau wie eine Fremdsprache lernt man HTML, Ruby on Rails oder JavaScript deswegen am besten in der Gruppe. Und am allerliebsten mit uns!</p>
+        <p> Erst mal gilt es, die Basics zu lernen - damit lassen sich dann schon die ersten Sätze bilden. Und keine Angst, hier geht es nicht darum, so schnell wie möglich perfekten Code zu schreiben. Wir möchten, dass ihr Spaß an der Sache habt, dass ihr Fragen stellt, dass ihr neugierig seid und dass aktiv werdet.</p>
 <p>Die Code Girls treffen sich alle 14 Tage im <a href="http://sublab.org">sub:lab</a> (Westwerk Plagwitz). Kommt vorbei, wenn ihr Hilfestellung beim Erstellen eurer Homepage oder Blog braucht, eine spezielle Fragen zum Theme Web-Programmierung habt, bei den Code Girls mitmischen wollte oder ganz einfach wissen wollt: Wie fange ich eigentlich an programmieren zu lernen? 
 </p>
 <ul>
@@ -84,7 +84,7 @@
         <p> Die Geschichte der Code Girls beginnt mit der erfolgreichen Teilnahme an einem Gewinnspiel eines Telekommunikationsunternehmens: Begeistert von der Aussicht ein paar Tage im sommerlichen Berlin zu verbringen Goodies abzustauben, reisen Natalie und Julia 2012 zur Campus Party in Berlin. </p>
           <p>Motiviert von den Erfolgsgeschichten junger Programmiererinnen und überzeugt, bald selbst auf Konferenzen vom eigenen Tech-Start-Up zu berichten, beschließen sie bei einem abendlichen Kaltgetränk die Gründung eines eigenen Codier- und Programmierstammtischs für Mädchen und Frauen in Leipzig.</p>
           <p>Das Start-Up lässt zwar noch auf sich warten, aber die Motivation, funktionale und ästhetisch ansprechende Seiten und Apps zu entwickeln, ist weiterhin ungebrochen. Mittlerweile dazugekommen ist Lucas, unser Coach, der uns mit Geduld und Expertise bei unseren Unternehmungen unterstützt.Inzwischen konzentrieren wir uns hauptsächlich auf die Organisation von Workshops und Vorträgen, sind aber weiterhin alle zwei Wochen
-          im sub:lab zu unseren "Office Hours" anzutreffen und begeistert über jede Frage und Projektidee, egal ob ihr euren Blog verschönern wollt, euer JavaScript Code spinnt oder ihr Tipps haben wollt, wie und wo man am besten mit dem Programmieren anfängt. Die Code Girl sind eine gemeinnütziges Projekt - wir haben Spass am Programmieren und wollen, dass ihr das auch habt. </p>
+          im sub:lab zu unseren "Office Hours" anzutreffen und begeistert über jede Frage und Projektidee, egal ob ihr euren Blog verschönern wollt, euer JavaScript Code spinnt oder ihr Tipps haben wollt, wie und wo man am besten mit dem Programmieren anfängt. Die Code Girl sind eine gemeinnütziges Projekt - wir haben Spaß am Programmieren und wollen, dass ihr das auch habt. </p>
       </section>
       
       <!-- contact -->
