point the resources link to the new domain

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <li><a href="#home">Home</a></li>
             <li><a href="#events">Termine</a></li>
             <li><a href="#where">Wo?</a></li>
-            <li><a href="http://codegirls.github.io/materials">Resources</a></li>
+            <li><a href="http://codegirls.de/materials">Resources</a></li>
             <!-- blog? ... (would be nice to publish stuff and announce things as well. an rss feed might be useful to some people as well.) -->
             <li><a href="#about">Über uns</a></li>
             <li><a href="#contact">Kontakt</a></li>
