less exclamation marks
whyy?? :)

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <li>Materialien zu unseren Projekten findet ihr <a href="http://codegirls.github.io/materials">hier</a>, interessante Links und Diskussionen gibt es in unserem Forum.</li>
 
-        <li>Bei Fragen habt oder wenn ihr mit uns zusammenarbeiten möchtet, <a href="mailto:info@codegirls.de">schreibt uns gerne eine Email!</a>!</li>
+        <li>Bei Fragen habt oder wenn ihr mit uns zusammenarbeiten möchtet, <a href="mailto:info@codegirls.de">schreibt uns gerne eine Email!</a></li>
 </ul>
         <img src="codegirls-session.jpg" />
 
