--- a/index.html
+++ b/index.html
@@ -38,13 +38,13 @@
         <h2>Werde ein Code Grrrl!</h2>
 
         <p>Schon mal versucht eine Fremdsprache zu lernen? Und von der Fülle an Vokabeln, Grammatik und Regeln total erschlagen gewesen? Genau so geht es euch vielleicht, wenn ihr euch das erste Mal mit einer Programmiersprache beschäftigt. Genau wie eine Fremdsprache lernt man HTML, Ruby on Rails oder JavaScript deswegen am besten in der Gruppe. Und am allerliebsten mit uns!</p>
-        <p> Erst mal gilt es, die Basics zu lernen - damit lassen sich dann schon die ersten Sätze bilden. Und keine Angst, hier geht es nicht darum, so schnell wie möglich perfekten Code zu schreiben. Wir möchten, dass ihr Spaß an der Sache habt, dass ihr Fragen stellt, dass ihr neugierig seid und dass aktiv werdet.</p>
-<p>Die Code Girls treffen sich alle 14 Tage im <a href="http://sublab.org">sub:lab</a> (Westwerk Plagwitz). Kommt vorbei, wenn ihr Hilfestellung beim Erstellen eurer Homepage oder Blog braucht, eine spezielle Fragen zum Theme Web-Programmierung habt, bei den Code Girls mitmischen wollte oder ganz einfach wissen wollt: Wie fange ich eigentlich an programmieren zu lernen? 
+        <p> Erst mal gilt es, die Basics zu lernen - damit lassen sich dann schon die ersten Sätze bilden. Und keine Angst, hier geht es nicht darum, so schnell wie möglich perfekten Code zu schreiben. Wir möchten, dass ihr Spaß an der Sache habt, dass ihr Fragen stellt, dass ihr neugierig seid und aktiv werdet.</p>
+<p>Die Code Girls treffen sich alle 14 Tage im <a href="http://sublab.org">sub:lab</a> (Westwerk Plagwitz). Kommt vorbei, wenn ihr Hilfestellung beim Erstellen eurer Homepage oder Blog braucht, eine spezielle Fragen zum Theme Web-Programmierung habt, bei den Code Girls mitmischen oder ganz einfach wissen wollt: Wie fange ich eigentlich an programmieren zu lernen? 
 </p>
 <ul>
         <li>Aktuelle Infos findet ihr hier oder auf unserer <a href="http://facebook.com/CodeGirls">Facebook Seite</a>.</li>
 
-        <li>Materialien zu unseren Projekten findet ihr <a href="http://codegirls.github.io/materials">hier</a>, interessante Links und Diskussionen gibt es in unserem Forum.</li>
+        <li>Materialien zu unseren Projekten findet ihr <a href="http://codegirls.github.io/materials">hier</a>, interessante Links und Diskussionen gibt es in unserem <a href="https://muut.com/code-girls-leipzig">Forum</a>.</li>
 
         <li>Bei Fragen habt oder wenn ihr mit uns zusammenarbeiten möchtet, <a href="mailto:info@codegirls.de">schreibt uns gerne eine Email!</a></li>
 </ul>
@@ -61,7 +61,7 @@
 
         <ul>
           <li>alle zwei Wochen: Eloquent JavaScript Buchklub (Anmeldung bald möglich)</li>
-          <li>Office Hours: 17.03., 31.03., 14.04. jeweils 19 bis 20:30 Uhr</li>
+          <li>Office Hours: 17.03., 14.04. jeweils 19 bis 20:30 Uhr</li>
         </ul>
       </section>
 
@@ -83,7 +83,7 @@
 
         <p> Die Geschichte der Code Girls beginnt mit der erfolgreichen Teilnahme an einem Gewinnspiel eines Telekommunikationsunternehmens: Begeistert von der Aussicht ein paar Tage im sommerlichen Berlin zu verbringen Goodies abzustauben, reisen Natalie und Julia 2012 zur Campus Party in Berlin. </p>
           <p>Motiviert von den Erfolgsgeschichten junger Programmiererinnen und überzeugt, bald selbst auf Konferenzen vom eigenen Tech-Start-Up zu berichten, beschließen sie bei einem abendlichen Kaltgetränk die Gründung eines eigenen Codier- und Programmierstammtischs für Mädchen und Frauen in Leipzig.</p>
-          <p>Das Start-Up lässt zwar noch auf sich warten, aber die Motivation, funktionale und ästhetisch ansprechende Seiten und Apps zu entwickeln, ist weiterhin ungebrochen. Mittlerweile dazugekommen ist Lucas, unser Coach, der uns mit Geduld und Expertise bei unseren Unternehmungen unterstützt.Inzwischen konzentrieren wir uns hauptsächlich auf die Organisation von Workshops und Vorträgen, sind aber weiterhin alle zwei Wochen
+          <p>Das Start-Up lässt zwar noch auf sich warten, aber die Motivation, funktionale und ästhetisch ansprechende Seiten und Apps zu entwickeln, ist weiterhin ungebrochen. Mittlerweile dazugekommen ist Lucas, unser Coach, der uns mit Geduld und Expertise bei unseren Unternehmungen unterstützt. Inzwischen konzentrieren wir uns hauptsächlich auf die Organisation von Workshops und Vorträgen, sind aber weiterhin alle zwei Wochen
           im sub:lab zu unseren "Office Hours" anzutreffen und begeistert über jede Frage und Projektidee, egal ob ihr euren Blog verschönern wollt, euer JavaScript Code spinnt oder ihr Tipps haben wollt, wie und wo man am besten mit dem Programmieren anfängt. Die Code Girl sind eine gemeinnütziges Projekt - wir haben Spaß am Programmieren und wollen, dass ihr das auch habt. </p>
       </section>
       
