fix a few typos

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
 
         <li>Materialien zu unseren Projekten findet ihr <a href="http://codegirls.github.io/materials">hier</a>, interessante Links und Diskussionen gibt es in unserem <a href="https://muut.com/code-girls-leipzig">Forum</a>.</li>
 
-        <li>Bei Fragen habt oder wenn ihr mit uns zusammenarbeiten möchtet, <a href="mailto:info@codegirls.de">schreibt uns gerne eine Email!</a></li>
+        <li>Wenn ihr Fragen habt oder mit uns zusammenarbeiten möchtet, <a href="mailto:info@codegirls.de">schreibt uns gerne eine Email!</a></li>
 </ul>
         <img src="codegirls-session.jpg" />
 
@@ -84,7 +84,7 @@
         <p> Die Geschichte der Code Girls beginnt mit der erfolgreichen Teilnahme an einem Gewinnspiel eines Telekommunikationsunternehmens: Begeistert von der Aussicht ein paar Tage im sommerlichen Berlin zu verbringen Goodies abzustauben, reisen Natalie und Julia 2012 zur Campus Party in Berlin. </p>
           <p>Motiviert von den Erfolgsgeschichten junger Programmiererinnen und überzeugt, bald selbst auf Konferenzen vom eigenen Tech-Start-Up zu berichten, beschließen sie bei einem abendlichen Kaltgetränk die Gründung eines eigenen Codier- und Programmierstammtischs für Mädchen und Frauen in Leipzig.</p>
           <p>Das Start-Up lässt zwar noch auf sich warten, aber die Motivation, funktionale und ästhetisch ansprechende Seiten und Apps zu entwickeln, ist weiterhin ungebrochen. Mittlerweile dazugekommen ist Lucas, unser Coach, der uns mit Geduld und Expertise bei unseren Unternehmungen unterstützt. Inzwischen konzentrieren wir uns hauptsächlich auf die Organisation von Workshops und Vorträgen, sind aber weiterhin alle zwei Wochen
-          im sub:lab zu unseren "Office Hours" anzutreffen und begeistert über jede Frage und Projektidee, egal ob ihr euren Blog verschönern wollt, euer JavaScript Code spinnt oder ihr Tipps haben wollt, wie und wo man am besten mit dem Programmieren anfängt. Die Code Girl sind eine gemeinnütziges Projekt - wir haben Spaß am Programmieren und wollen, dass ihr das auch habt. </p>
+          im sub:lab zu unseren "Office Hours" anzutreffen und begeistert über jede Frage und Projektidee, egal ob ihr euren Blog verschönern wollt, euer JavaScript Code spinnt oder ihr Tipps haben wollt, wie und wo man am besten mit dem Programmieren anfängt. Die Code Girls sind ein gemeinnütziges Projekt - wir haben Spaß am Programmieren und wollen, dass ihr das auch habt. </p>
       </section>
       
       <!-- contact -->
