update iframe div

--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
       <section id="about">
         <h2>Über uns</h2>
         
-        <iframe width="640" height="360" src="https://www.youtube.com/embed/jyXHXtCqlm8?rel=0" frameborder="0" allowfullscreen></iframe>
+        <div id="imgvideo"><iframe width="640" height="360" src="https://www.youtube.com/embed/jyXHXtCqlm8?rel=0" frameborder="0" allowfullscreen></iframe></div>
 
         <p> Die Geschichte der Code Girls beginnt mit der erfolgreichen Teilnahme an einem Gewinnspiel eines Telekommunikationsunternehmens: Begeistert von der Aussicht ein paar Tage im sommerlichen Berlin zu verbringen Goodies abzustauben, reisen Natalie und Julia 2012 zur Campus Party in Berlin. </p>
           <p>Motiviert von den Erfolgsgeschichten junger Programmiererinnen und überzeugt, bald selbst auf Konferenzen vom eigenen Tech-Start-Up zu berichten, beschließen sie bei einem abendlichen Kaltgetränk die Gründung eines eigenen Codier- und Programmierstammtischs für Mädchen und Frauen in Leipzig.</p>
