add link to the eloquent.js bookclub at the top

--- a/index.html
+++ b/index.html
@@ -31,6 +31,11 @@
           </ul>
         </nav>
       </header>
+
+      <section id="current">
+        <p><strong>Aktuell:</strong> Ab Mai bieten wir den Eloquent JavaScript Buchklub an, zu dem ihr
+          euch <a href="https://codegirlsleipzig.wufoo.com/forms/javascript-buchclub/">hier anmelden</a> könnt.</p>
+      </section>
       
       <!-- introduction (with image from current site) -->
       <section id="home">
