we're meeting in the social impact lab now

--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
 
         <p>Schon mal versucht eine Fremdsprache zu lernen? Und von der Fülle an Vokabeln, Grammatik und Regeln total erschlagen gewesen? Genau so geht es euch vielleicht, wenn ihr euch das erste Mal mit einer Programmiersprache beschäftigt. Genau wie eine Fremdsprache lernt man HTML, Ruby on Rails oder JavaScript deswegen am besten in der Gruppe. Und am allerliebsten mit uns!</p>
         <p> Erst mal gilt es, die Basics zu lernen - damit lassen sich dann schon die ersten Sätze bilden. Und keine Angst, hier geht es nicht darum, so schnell wie möglich perfekten Code zu schreiben. Wir möchten, dass ihr Spaß an der Sache habt, dass ihr Fragen stellt, dass ihr neugierig seid und aktiv werdet.</p>
-<p>Die Code Girls treffen sich alle 14 Tage im <a href="http://sublab.org">sub:lab</a> (Westwerk Plagwitz). Kommt vorbei, wenn ihr Hilfestellung beim Erstellen eurer Homepage oder Blog braucht, eine spezielle Fragen zum Theme Web-Programmierung habt, bei den Code Girls mitmischen oder ganz einfach wissen wollt: Wie fange ich eigentlich an programmieren zu lernen? 
+<p>Die Code Girls treffen sich alle 14 Tage im <a href="http://leipzig.socialimpactlab.eu">Social Impact Lab</a>. Kommt vorbei, wenn ihr Hilfestellung beim Erstellen eurer Homepage oder Blog braucht, eine spezielle Fragen zum Theme Web-Programmierung habt, bei den Code Girls mitmischen oder ganz einfach wissen wollt: Wie fange ich eigentlich an programmieren zu lernen? 
 </p>
 <ul>
         <li>Aktuelle Infos findet ihr hier oder auf unserer <a href="http://facebook.com/CodeGirls">Facebook Seite</a>.</li>
@@ -74,10 +74,10 @@
       <section id="where">
         <h2>Wo?</h2>
 
-        <p>Im <a href="http://sublab.org">sub:lab</a> im Westwerk (Plagwitz), Karl-Heine-Straße 93. Erreichbar mit den Straßenbahnen 3 und 14.</p>
+        <p>Im <a href="http://leipzig.socialimpactlab.eu">Social Impact Lab</a> in Plagwitz, Weißenfelser Str. 65 H. Erreichbar mit den Straßenbahnen 3 und 14.</p>
 
         <!-- prevent zooming when just "scrolling over"? maybe only enable zooming via buttons or when clicked? that might be confusing, though. -->
-        <iframe id="map" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=12.329846620559692%2C51.32971669149415%2C12.3319011926651%2C51.33076749733022&amp;layer=mapnik&amp;marker=51.33024125945914%2C12.330873906612396"></iframe>
+        <iframe id="map" scrolling="no" marginheight="0" marginwidth="0" src="http://www.openstreetmap.org/export/embed.html?bbox=12.32789397239685,51.32774908917328,12.33388066291809,51.32985076694428&layer=mapnik&marker=51.3287982641204,12.33088731765747"></iframe>
       </section>
       
       <!-- resources (?, maybe just have a link in the navigation?) -->
@@ -91,7 +91,7 @@
         <p> Die Geschichte der Code Girls beginnt mit der erfolgreichen Teilnahme an einem Gewinnspiel eines Telekommunikationsunternehmens: Begeistert von der Aussicht ein paar Tage im sommerlichen Berlin zu verbringen Goodies abzustauben, reisen Natalie und Julia 2012 zur Campus Party in Berlin. </p>
           <p>Motiviert von den Erfolgsgeschichten junger Programmiererinnen und überzeugt, bald selbst auf Konferenzen vom eigenen Tech-Start-Up zu berichten, beschließen sie bei einem abendlichen Kaltgetränk die Gründung eines eigenen Codier- und Programmierstammtischs für Mädchen und Frauen in Leipzig.</p>
           <p>Das Start-Up lässt zwar noch auf sich warten, aber die Motivation, funktionale und ästhetisch ansprechende Seiten und Apps zu entwickeln, ist weiterhin ungebrochen. Mittlerweile dazugekommen ist Lucas, unser Coach, der uns mit Geduld und Expertise bei unseren Unternehmungen unterstützt. Inzwischen konzentrieren wir uns hauptsächlich auf die Organisation von Workshops und Vorträgen, sind aber weiterhin alle zwei Wochen
-          im sub:lab zu unseren "Office Hours" anzutreffen und begeistert über jede Frage und Projektidee, egal ob ihr euren Blog verschönern wollt, euer JavaScript Code spinnt oder ihr Tipps haben wollt, wie und wo man am besten mit dem Programmieren anfängt. Die Code Girls sind ein gemeinnütziges Projekt - wir haben Spaß am Programmieren und wollen, dass ihr das auch habt. </p>
+          im Social Impact Lab zu unseren "Office Hours" anzutreffen und begeistert über jede Frage und Projektidee, egal ob ihr euren Blog verschönern wollt, euer JavaScript Code spinnt oder ihr Tipps haben wollt, wie und wo man am besten mit dem Programmieren anfängt. Die Code Girls sind ein gemeinnütziges Projekt - wir haben Spaß am Programmieren und wollen, dass ihr das auch habt. </p>
     
      <ul>
        <li>Die Code Girls im <a href="https://www.torial.com/pia.rauschenberger/contents/144375">Kreuzer</a></li>
