removed application links

--- a/index.html
+++ b/index.html
@@ -32,11 +32,11 @@
         </nav>
       </header>
 
+      <!-- add if there are current events
       <section id="current">
-        <p><strong>Aktuell:</strong> Ab Mai bieten wir den Eloquent JavaScript Buchklub an, zu dem ihr
-          euch <a href="https://codegirlsleipzig.wufoo.com/forms/javascript-buchclub/">hier anmelden</a> könnt.</p>
+        <p><strong>Aktuell:</strong> Seit Mai läuft unser <a href = http://eloquentjavascript.net/>Eloquent Javascript</a> Buchclub</p>
       </section>
-      
+      -->
       <!-- introduction (with image from current site) -->
       <section id="home">
         <!-- Make this a "hero image" with the image below? http://en.wikipedia.org/wiki/Hero_image -->
