--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
         <p>Neben den regulären Treffen alle zwei Wochen laden wir in unregelmäßigen Abständen EntwicklerInnen zu Workshops und Vorträgen ein.</p>
 
         <ul>
-          <li>alle zwei Wochen ab 05.05.: <a href ="http://eloquentjavascript.net/">Eloquent JavaScript</a> Buchklub (Anmeldung und mehr Infos <a href="https://codegirlsleipzig.wufoo.com/forms/zkiuhv30h181cy/">hier</a>)</li>
-          <li>Office Hours: 14.04., 28.04. jeweils 19 bis 20:30 Uhr</li>
+          <li>alle zwei Wochen ab 05.05.: <a href ="http://eloquentjavascript.net/">Eloquent JavaScript</a> Buchklub</li>
         </ul>
       </section>
 
