--- a/index.html
+++ b/index.html
@@ -122,5 +122,12 @@
     <!-- Mailchimp
     <script type="text/javascript" src="//s3.amazonaws.com/downloads.mailchimp.com/js/signup-forms/popup/embed.js" data-dojo-config="usePlainJson: true, isDebug: false"></script><script type="text/javascript">require(["mojo/signup-forms/Loader"], function(L) { L.start({"baseUrl":"mc.us11.list-manage.com","uuid":"eda437bf490923ed2c2c33872","lid":"c175a3a927"}) })</script>
    -->
-  </body>
+
+   <a href="/subscribe">
+     <div id="subscribe">
+       <img src="email-love.png" width="75" height="75" />
+       <p>Want Fan Post?</p>
+     </div>
+   </a>
+ </body>
 </html>
