--- a/index.html
+++ b/index.html
@@ -65,7 +65,8 @@
         <p>Neben den regulären Treffen alle zwei Wochen laden wir in unregelmäßigen Abständen EntwicklerInnen zu Workshops und Vorträgen ein.</p>
 
         <ul>
-          <li>alle zwei Wochen ab 05.05.: <a href ="http://eloquentjavascript.net/">Eloquent JavaScript</a> Buchklub</li>
+          <li>ab 13. Oktober und dann alle zwei Wochen um 19 Uhr im Social Impact Lab: <b>Open Code Night</b></li>
+          <li>am 27. Oktober: <b>Wordpress Workshop</b> Anmelden und informieren könnt ihr euch unter <a href="mailto:info@codegirls.de">info@codegirls.de</a></li>
         </ul>
       </section>
 
