--- a/index.html
+++ b/index.html
@@ -65,8 +65,8 @@
         <p>Neben den regulären Treffen alle zwei Wochen laden wir in unregelmäßigen Abständen EntwicklerInnen zu Workshops und Vorträgen ein.</p>
 
         <ul>
-          <li>ab 13. Oktober und dann alle zwei Wochen um 19 Uhr im Social Impact Lab: <b>Open Code Night</b></li>
-          <li>am 27. Oktober: <b>Wordpress Workshop</b> Anmelden und informieren könnt ihr euch unter <a href="mailto:info@codegirls.de">info@codegirls.de</a></li>
+          <li>am 12. März 19:30 Uhr: <a href ="http://www.henschel-verlag.de/Buch/9783733804046-We-Love-Code">We Love Code!</a> Buch-Releaseparty in der <a href ="http://www.rumpelkammer-leipzig.de/">Rumpelkammer</a></li>
+          <li>am 22. März 19 Uhr: <b>Flexmodel mit HTML5 und CSS3</b></li>
         </ul>
       </section>
 
