--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
 
         <ul>
           <li>am 12. März 19:30 Uhr: <a href ="http://www.henschel-verlag.de/Buch/9783733804046-We-Love-Code">We Love Code!</a> Buch-Releaseparty in der <a href ="http://www.rumpelkammer-leipzig.de/">Rumpelkammer</a></li>
-          <li>am 22. März 19 Uhr: <b>Flexmodel mit HTML5 und CSS3</b></li>
+          <li>ACHTUNG! geändertes Datum: am 5. April 19 Uhr: <b>Flexbox-Modell mit HTML5 und CSS3</b></li> mit Coach <a href="https://twitter.com/renezschoch">René Zschoch</a>
         </ul>
       </section>
 
