Algorithmus-Date hinzugefügt

--- a/index.html
+++ b/index.html
@@ -65,8 +65,7 @@
         <p>Neben den regulären Treffen alle zwei Wochen laden wir in unregelmäßigen Abständen EntwicklerInnen zu Workshops und Vorträgen ein.</p>
 
         <ul>
-          <li>am 12. März 19:30 Uhr: <a href ="http://www.henschel-verlag.de/Buch/9783733804046-We-Love-Code">We Love Code!</a> Buch-Releaseparty in der <a href ="http://www.rumpelkammer-leipzig.de/">Rumpelkammer</a></li>
-          <li>ACHTUNG! geändertes Datum: am 5. April 19 Uhr: <b>Flexbox-Modell mit HTML5 und CSS3</b></li> mit Coach <a href="https://twitter.com/renezschoch">René Zschoch</a>
+          <li><b>Was ist eigentlich ein Algorithmus?</b> mit Coach Silvio Weging. 19 Uhr im Social Impact Lab</li>
         </ul>
       </section>
 
