--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>Neben den regulären Treffen alle zwei Wochen laden wir in unregelmäßigen Abständen EntwicklerInnen zu Workshops und Vorträgen ein.</p>
 
         <ul>
-          <li><b>Was ist eigentlich ein Algorithmus?</b> mit Coach Silvio Weging. 19 Uhr im Social Impact Lab</li>
+          <li>3. Mai: <b>Was ist eigentlich ein Algorithmus?</b> mit Coach Silvio Weging. 19 Uhr im Social Impact Lab</li>
         </ul>
       </section>
 
