--- a/index.html
+++ b/index.html
@@ -65,9 +65,7 @@
         <p>Neben den regulären Treffen alle zwei Wochen laden wir in unregelmäßigen Abständen EntwicklerInnen zu Workshops und Vorträgen ein.</p>
 
         <ul>
-          <li>31. Mai: <b>Game Night: <a href="https://tomorrowcorporation.com/humanresourcemachine">Human Resource Machine</a></b></B></b> 19 Uhr im Social Impact Lab</li>
-          <li>14. Juni: <b>Wordpress Werkstatt: Better Safe Than Sorry</b> 19 Uhr im Social Impact Lab</li>    
-          <li>21. Juni: <b>Saison Abschluss: Code Girls Q&A</b> 19 Uhr im Social Impact Lab</li>
+          <li>20. September: <b>Game Night: <a href="https://tomorrowcorporation.com/humanresourcemachine">Human Resource Machine</a></b></B></b> 19 Uhr im Social Impact Lab</li>
         </ul>
       </section>
 
