--- a/index.html
+++ b/index.html
@@ -65,7 +65,7 @@
         <p>Neben den regulären Treffen alle zwei Wochen laden wir in unregelmäßigen Abständen EntwicklerInnen zu Workshops und Vorträgen ein.</p>
 
         <ul>
-          <li>20. September: <b>Game Night: <a href="https://tomorrowcorporation.com/humanresourcemachine">Human Resource Machine</a></b></B></b> 19 Uhr im Social Impact Lab</li>
+          <li>15. November: <b>Webdesign mit Bootstrap</b> mit Coach <a href="https://twitter.com/mkraetke">Martin Kraetke</a>. 19 Uhr im Social Impact Lab</li>
         </ul>
       </section>
 
